Confecção dos arquivos JS correspondentes às opções de link

--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -119,6 +119,7 @@
         </table>
     </div>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+    <script defer src="\scripts\agnosticismo.js"></script>
 </body>
 
 </html>
