--- a/ateismo.html
+++ b/ateismo.html
@@ -169,6 +169,7 @@
         </table>
     </div>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+    <script defer src="\scripts\ateismo.js"></script>
 </body>
 
 </html>
