--- a/deismo.html
+++ b/deismo.html
@@ -111,6 +111,7 @@
         </table>
     </div>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+    <script defer src="\scripts\deismo.js"></script>
 </body>
 
 </html>
