--- a/panteismo.html
+++ b/panteismo.html
@@ -73,6 +73,7 @@
             </tr>
         </table>
         <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+        <script defer src="\scripts\panteismo.js"></script>
 </body>
 
 </html>
