--- a/teismo.html
+++ b/teismo.html
@@ -64,12 +64,10 @@
                             src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-        <!-- (set: $opcaoClicada to true) -->
-
-        <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 
     </div>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+    <script defer src="\scripts\teismo.js"></script>
 </body>
 
 </html>
