--- a/gnosticismo.html
+++ b/gnosticismo.html
@@ -109,6 +109,7 @@
         </table>
     </div>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+    <script defer src="\scripts\gnosticismo.js"></script>
 </body>
 
 </html>
