Criou função  para desativar links de página

--- a/gnosticismo.html
+++ b/gnosticismo.html
@@ -92,24 +92,19 @@
 
         <table class="opcoes">
             <tr>
-                <td><a href="teismo.html" rel="next"><img class="opcao" id="opcao1" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" rel="next"><img class="opcao" id="opcao2" src="\imagens\ateismo.png"></a>
-                </td>
-                <td><a href="panteismo.html" rel="next"><img class="opcao" id="opcao3" src="\imagens\panteismo.png"></a>
-                </td>
+                <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a></td>  
+                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao" src="\imagens\panteismo.png"></a></td>  
             </tr>
             <tr>
-                <td><a href="deismo.html" rel="next"><img class="opcao" id="opcao4" src="\imagens\deismo.png"></a></td>
-                <td><a href="gnosticismo.html" rel="next"><img class="opcao" id="opcao5"
-                            src="\imagens\gnosticismo.png"></a>
-                </td>
-                <td><a href="agnosticismo.html" rel="next"><img class="opcao" id="opcao6"
-                            src="\imagens\agnosticismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td> 
+                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao" src="\imagens\gnosticismo.png"></a></td>
+                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
     </div>
-    <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
     <script defer src="\scripts\gnosticismo.js"></script>
+    <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
 
 </html>
