--- a/pagina2.html
+++ b/pagina2.html
@@ -84,7 +84,7 @@
                 <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-
+        <script defer src="/scripts/iniciandopaginas.js"></script> <!-- defer = carregar script depois do carregamento do css -->
         <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
 </html>
