--- a/ateismo.html
+++ b/ateismo.html
@@ -144,32 +144,30 @@
                     pensar a vida oposta a daqueles que são chamados de materialistas.
                 </span>
             </div>" e são aqueles que vivem como se não existissem deuses, e explicam tudo
-            que acontece como coisas normais, fenômenos naturais, fatos que não se precisa 
+            que acontece como coisas normais, fenômenos naturais, fatos que não se precisa
             recorrer ao divino para explicá-los, ainda que, num primeiro momento, não haja
             conhecimento suficiente para entendê-los. A existência de deuses não é rejeitada,
             mas pode ser designada como desnecessária ou inútil, aproximando bastante do deísmo.
-            
+
         </div>
         <table class="opcoes">
             <tr>
-                <td><a href="teismo.html" rel="next"><img class="opcao" id="opcao1" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" rel="next"><img class="opcao" id="opcao2" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
                 </td>
-                <td><a href="panteismo.html" rel="next"><img class="opcao" id="opcao3" src="\imagens\panteismo.png"></a>
-                </td>
+                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao"
+                            src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" rel="next"><img class="opcao" id="opcao4" src="\imagens\deismo.png"></a></td>
-                <td><a href="gnosticismo.html" rel="next"><img class="opcao" id="opcao5"
-                            src="\imagens\gnosticismo.png"></a>
-                </td>
-                <td><a href="agnosticismo.html" rel="next"><img class="opcao" id="opcao6"
+                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\gnosticismo.png"></a></td>
+                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao"
                             src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-    </div>
-    <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
-    <script defer src="\scripts\ateismo.js"></script>
+        <script defer src="\scripts\ateismo.js"></script>
+        <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
 
 </html>
