Criou o botão link e corrigimos o bug de lista vazia

--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -113,6 +113,7 @@
             </tr>
         </table>
     </div>
+    <button id="link">APERTE</button>
     <script defer src="\scripts\agnosticismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
