--- a/ateismo.html
+++ b/ateismo.html
@@ -166,6 +166,7 @@
                             src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
+        <button id="link">APERTE</button>
         <script defer src="\scripts\ateismo.js"></script>
         <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
