--- a/deismo.html
+++ b/deismo.html
@@ -105,6 +105,7 @@
             </tr>
         </table>
     </div>
+    <button id="link">APERTE</button>
     <script defer src="\scripts\deismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
