--- a/gnosticismo.html
+++ b/gnosticismo.html
@@ -103,6 +103,7 @@
             </tr>
         </table>
     </div>
+    <button id="link">APERTE</button>
     <script defer src="\scripts\gnosticismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
