--- a/panteismo.html
+++ b/panteismo.html
@@ -68,6 +68,7 @@
                 <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
+        <button id="link">APERTE</button>
         <script defer src="\scripts\panteismo.js"></script>
         <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
