--- a/teismo.html
+++ b/teismo.html
@@ -60,8 +60,8 @@
                 <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-
     </div>
+    <button id="link">APERTE</button>
     <script defer src="\scripts\teismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
