Mudei  o efeito dos links acessados de display none para opacity 0.3

--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -112,8 +112,10 @@
                 <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
+        <div id="tela-final">
+            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+        </div>
     </div>
-    <button id="link">APERTE</button>
     <script defer src="\scripts\agnosticismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
