--- a/ateismo.html
+++ b/ateismo.html
@@ -166,9 +166,12 @@
                             src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-        <button id="link">APERTE</button>
-        <script defer src="\scripts\ateismo.js"></script>
-        <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+        <div id="tela-final">
+            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+        </div>
+    </div>
+    <script defer src="\scripts\ateismo.js"></script>
+    <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
 
 </html>
