--- a/deismo.html
+++ b/deismo.html
@@ -59,14 +59,14 @@
             tipo de ateu acredita que ele próprio é deus, ou seja, é o deus de sua própria
             vida, sendo o dono controlador dela. Muitos deístas acabam se tornando ateus,
             assim como muitos ateus se tornam deístas. As dúvidas sobre o surgimento da vida,
-            o 
+            o
             <div class="tooltip">
                 <h3>Big Bang</h3>
                 <span class="tooltip3">
                     Teoria que descreve a origem do universo a partir de uma explosão
                     de uma única partícula.
-                </span>    
-            </div>,        
+                </span>
+            </div>,
             transformaram muitos agnósticos ou ateus, em deístas. Também muitos teístas
             se tornam deístas e mais tarde,
             <div class="tooltip">
@@ -95,17 +95,23 @@
         <table class="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a></td>  
-                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao" src="\imagens\panteismo.png"></a></td>  
+                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                </td>
+                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao"
+                            src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td> 
-                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao" src="\imagens\gnosticismo.png"></a></td>
-                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\gnosticismo.png"></a></td>
+                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
+        <div id="tela-final">
+            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+        </div>
     </div>
-    <button id="link">APERTE</button>
     <script defer src="\scripts\deismo.js"></script>
     <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
