--- a/pagina2.html
+++ b/pagina2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="\styles\media-pagina2.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     <div class="pagina">
         <div id="quadro1">
@@ -15,12 +16,13 @@
             <div id="texto-perfil">
                 Bom dia, alunos! Sejam todos muito bem-vindos!
                 Em instantes iniciaremos nosso teste avaliativo. Em consonância com nossa
-                concepção de uma educação sob uma perspectiva 
-                    <div class="tooltip"><h3>holística</h3>
-                        <span class="tooltip1">Que considera o todo, não somente como
+                concepção de uma educação sob uma perspectiva
+                <div class="tooltip">
+                    <h3>holística</h3>
+                    <span class="tooltip1">Que considera o todo, não somente como
                         uma junção de suas partes; que busca entender os fenômenos por
                         completo, inteiramente.</span>
-                    </div>,
+                </div>,
                 avaliaremos o conteúdo dispensado nos últimos meses de maneira multidisciplinar
                 abrangendo os conteúdos científicos e filosóficos. Também serão avaliados
                 aspectos de expressão verbal e interpretação de texto, dentre outros.
@@ -37,9 +39,10 @@
             de 30 minutos para cada postagem. Tenha total liberdade para expressar seu ponto
             de vista, porém seus argumentos deverão estar embasados em algum fato histórico,
             ou na opinião de alguém que tenha peso ou
-                <div class="tooltip"><h3>relevância</h3><span class="tooltip2">
+            <div class="tooltip">
+                <h3>relevância</h3><span class="tooltip2">
                     Importância, lado vantajoso de alguma coisa.</span>
-                </div>.
+            </div>.
             Você deverá contra-argumentar cada colocação feita por seus colegas, quer concordando
             ou quer discordando, e lembre-se sempre de embasar seu ponto de vista.
         </div>
@@ -49,11 +52,12 @@
             Tudo o que vemos surgiu do nada? Surgiu por si só ou foi criado?
             Quando começou a vida? Ou será que a vida sempre existiu?
             O universo teve um início? Foi fruto do acaso?
-            Existe o sobrenatural, o 
-                <div class="tooltip"><h3>transcendente</h3><span class="tooltip3">
+            Existe o sobrenatural, o
+            <div class="tooltip">
+                <h3>transcendente</h3><span class="tooltip3">
                     Qualidade daquele que vai além, do que ultrapassa a média, os limites do
                     considerado normal. Inteligência notável por exceder o aceitável.</span>
-                </div>,
+            </div>,
             algo além? É possível saber ou conhecer aquilo que vai além do que experimentamos
             pelos cinco sentidos naturais? Existe vida em outros planetas?
             Somos seres espirituais em corpos materiais?
@@ -63,9 +67,10 @@
         </div>
         <div id="quadro4">
             Antes de tudo seria proveitoso
-                <div class="tooltip"><h3>ratificar</h3><span class="tooltip4">
+            <div class="tooltip">
+                <h3>ratificar</h3><span class="tooltip4">
                     reafirmar, validar, confirmar</span>
-                </div>
+            </div>
             alguns conceitos que serão fundamentais nessa discussão.
             Abaixo aparecem algumas das diferentes linhas de pensamento que tentam
             compreender o mundo a partir de sua relação com o transcendente.
@@ -75,17 +80,26 @@
         <table class="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a></td>  
-                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao" src="\imagens\panteismo.png"></a></td>  
+                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                </td>
+                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao"
+                            src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td> 
-                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao" src="\imagens\gnosticismo.png"></a></td>
-                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\gnosticismo.png"></a></td>
+                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-        <button id="link">APERTE</button>
-        <script defer src="/scripts/iniciandopaginas.js"></script> <!-- defer = carregar script depois do carregamento do css -->
-        <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+        <div id="tela-final">
+            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+        </div>
+    </div>
+    <script defer src="/scripts/iniciandopaginas.js"></script>
+    <!-- defer = carregar script depois do carregamento do css -->
+    <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
+
 </html>
