--- a/panteismo.html
+++ b/panteismo.html
@@ -59,18 +59,25 @@
         <table class="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a></td>  
-                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao" src="\imagens\panteismo.png"></a></td>  
+                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                </td>
+                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao"
+                            src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td> 
-                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao" src="\imagens\gnosticismo.png"></a></td>
-                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao" src="\imagens\agnosticismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\gnosticismo.png"></a></td>
+                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao"
+                            src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
-        <button id="link">APERTE</button>
-        <script defer src="\scripts\panteismo.js"></script>
-        <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
+        <div id="tela-final">
+            <button id="link"><img id="mensagem-final" src="/imagens/match.png"></button>
+        </div>
+    </div>
+    <script defer src="\scripts\panteismo.js"></script>
+    <script defer src="\scripts\script.js"></script> <!-- defer = carregar script depois do carregamento do css -->
 </body>
 
 </html>
