Reconfiguração do button link

--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -100,7 +100,7 @@
             e para mim, isso basta.
         </div>
         <img src="\imagens\rene-descartes.png">
-        <table class="opcoes">
+        <table id="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
                 <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a></td>  
