--- a/ateismo.html
+++ b/ateismo.html
@@ -150,7 +150,7 @@
             mas pode ser designada como desnecessária ou inútil, aproximando bastante do deísmo.
 
         </div>
-        <table class="opcoes">
+        <table id="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
                 <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
