--- a/deismo.html
+++ b/deismo.html
@@ -92,7 +92,7 @@
             se lê em uma de suas cartas:
         </div>
         <img id="cena" src="\imagens\alberteinstein.png">
-        <table class="opcoes">
+        <table id="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
                 <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
