--- a/pagina2.html
+++ b/pagina2.html
@@ -77,13 +77,11 @@
             Então, clique em uma delas e explique o seu significado. Cite também um
             importante nome da história que foi ou é adepto desta maneira de pensar.
         </div>
-        <table class="opcoes">
+        <table id="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
-                </td>
-                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao"
-                            src="\imagens\panteismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a></td>
+                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao" src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
                 <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
