--- a/panteismo.html
+++ b/panteismo.html
@@ -56,7 +56,7 @@
             otimista. Contraria o pessimismo de pensamentos menores, como inferno e sofrimento,
             e impulsiona a humanidade ao progresso científico e filosófico.
         </div>
-        <table class="opcoes">
+        <table id="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
                 <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
