--- a/teismo.html
+++ b/teismo.html
@@ -48,7 +48,7 @@
             incentivo, para que, coisas tão difíceis de entender, não me desmotive
             a procurar entender de onde eu vim, por que estou aqui, e para onde vou.
         </div>
-        <table class="opcoes">
+        <table id="opcoes">
             <tr>
                 <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
                 <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
