Anular opção já clicada

--- a/teismo.html
+++ b/teismo.html
@@ -50,17 +50,17 @@
         </div>
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
                 </td>
-                <td><a href="panteismo.html" id="panteismo" rel="next"><img class="opcao"
+                <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
-                <td><a href="gnosticismo.html" id="gnosticismo" rel="next"><img class="opcao"
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\gnosticismo.png"></a></td>
-                <td><a href="agnosticismo.html" id="agnosticismo" rel="next"><img class="opcao"
+                <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\agnosticismo.png"></a></td>
             </tr>
         </table>
