--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -15,50 +15,67 @@
             <img id="perfil" src="\imagens\perfil-maura.jpg">
             <div id="texto-perfil">
                 <h4>AGNOSTICISMO (AGNÓSTICO)</h4>
+                <hr>
                 O agnóstico diz não ser possível saber qual a origem do universo e se
                 existe ou não um deus, ou mesmo qual seja a razão da existência humana.
                 Diz também, ser preferível acreditar apenas em
                 <div class="tooltip">
                     <h3>evidências</h3>
-                    <span class="tooltip1">Pista que serve para demonstrar ou esclarecer
-                        um fato, uma causa, ou uma verdade.
+                    <span class="tooltip1">Pista que serve para demonstrar ou
+                        esclarecer um fato, uma causa, ou uma verdade.
                     </span>
                 </div>,
                 duvidando de qualquer tipo de experiência
                 <div class="tooltip">
                     <h3>mística</h3>
-                    <span class="tooltip2">Algo em que há mistério e que, para que se possa
-                        compreender é necessário algum tipo de revelação.
+                    <span class="tooltip2">Algo em que há mistério e que, para que se
+                        possa compreender é necessário algum tipo de revelação.
                     </span>
                 </div>.
-                Assim, como não existe evidências ou conhecimento suficiente nem para se
-                provar que deus existe, ou como surgiu o universo, nem tão pouco para provar
-                o contrário, então é mais honesto manter a dúvida do que afirmar algo que
-                não se pode provar.
+                E como não existe evidências ou conhecimento suficiente, nem para se
+                provar que Deus existe, ou como surgiu o universo, nem tão pouco para
+                provar o contrário, então, é mais honesto manter a dúvida do que
+                afirmar algo que não se pode provar. Como diz o escritor do site
+                <strong>Ceticismo, Ciência & Tecnologia</strong>: o agnóstico é
+                aquele que se vê incapaz de dizer algo ou atribuir características
+                a qualquer ser
+                <div class="tooltip">
+                    <h3>supranatural</h3>.
+                    <span class="tooltip3">O mesmo que sobrenatural, sobre-humano,
+                        que só pode ser conhecido pelo exercício da fé e portanto,
+                        não pode ser comprovado cientificamente.
+                    </span>
+                </div>
+                já que estaria num nível muito acima de nossa capacidade de
+                entendimento.
             </div>
         </div>
         <div id="quadro2">
-            Dentro do agnosticismo há três principais divisões:<br>
-            * O agnóstico <strong>ateísta</strong> que é aquele que não acredita na
-            existência de Deus, já que não se pode prová-la. O filósofo
-            <div class="tooltip">
-                <h3>Bertrand Russell</h3>
-                <span class="tooltip3">
-                    Foi um dos mais influentes matemáticos, filósofos, ensaístas,
-                    historiadores que viveram no século XX.
-                </span>
-            </div>,
-            ganhador do Prêmio Nobel, é um bom exemplo.<br>
-            <img id="cena" src="\imagens\bertrand-russell.png">
+            <div id="caixa-texto-quadro2">
+                Dentro do agnosticismo há três principais divisões:<br>
+                * O agnóstico <strong>ateísta</strong> que é aquele que não acredita na
+                existência de Deus, já que não se pode prová-la. O filósofo
+                <div class="tooltip">
+                    <h3>Bertrand Russell</h3>
+                    <span class="tooltip4">
+                        Foi um dos mais influentes matemáticos, filósofos, ensaístas,
+                        historiadores que viveram no século XX.
+                    </span>
+                </div>,
+                ganhador do Prêmio Nobel, é um bom exemplo.<br>
+            </div>
+            <img id="imgQ2" src="\imagens\bertrand-russell.png">
         </div>
         <div id="quadro3">
             * O agnóstico <strong>apático</strong>, por sua vez, é aquele que não se importa
             em provar se deus existe ou não; isto é indiferente para ele.<br>
             * O agnóstico <strong>teísta</strong> acredita na existência de um “ser maior”
             porém não há como conhecê-lo ou saber como ele é, muito menos ter um relacionamento
-            com ele.<br><br>
-            Para ser sincera, acho uma tremenda perda de tempo ficar discutindo, se deus
-            existe ou não, já que não há como saber com certeza. Alguns amigos meus
+            com ele.<br>
+            Para ser sincera, acho uma tremenda perda de tempo ficar discutindo, se Deus
+            existe ou não, já que não há como saber com certeza.
+            De que adianta alegar uma coisa se eu não posso provar? Nada! Eu posso,
+            simplesmente não acreditar em você. É um direito meu. Alguns amigos meus
             tentam me convencer com muitos argumentos do tipo: "Eu senti isso!" Ou
             "Veja o milagre que aconteceu na minha vida!" Mas isso não prova nada!
             Não é fato científico. Tudo o que temos são dúvidas e erros, não há como
@@ -81,7 +98,7 @@
             existe pensar? Será que sou um espírito encarnado como pensa os
             <div class="tooltip">
                 "<h3>espíritas</h3>"
-                <span class="tooltip4">Pessoas adeptas da doutrina de teor religioso
+                <span class="tooltip5">Pessoas adeptas da doutrina de teor religioso
                     que, dentre outras coisas crê que o ser humano é um espírito dentro de
                     um corpo material. E tal espírito é imortal, e sendo assim, com a morte
                     do corpo, volta a se encarnar.
@@ -90,7 +107,7 @@
             uma ilusão criada pela
             <div class="tooltip">
                 "<h3>Matrix</h3>"
-                <span class="tooltip5">Matrix é o nome de um filme que contém referências filosóficas às ideias
+                <span class="tooltip6">Matrix é o nome de um filme que contém referências filosóficas às ideias
                     apresentadas na filosofia idealista platônica, fazendo claras referências à alegoria do "Mito da
                     Caverna" de Platão. Para Platão, o conhecimento verdadeiro está no campo do intelecto. Todo
                     conhecimento advindo das sensações do corpo é enganoso.
@@ -99,17 +116,20 @@
             Mas de uma coisa eu sei, e não preciso ter a menor dúvida: eu existo,
             e para mim, isso basta.
         </div>
-        <img src="\imagens\rene-descartes.png">
+        <img id="imgQ5" src="\imagens\rene-descartes.png">
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\ateismo.png"></a>
                 </td>
                 <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\deismo.png"></a></td>
                 <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\gnosticismo.png"></a></td>
                 <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
