--- a/ateismo.html
+++ b/ateismo.html
@@ -15,6 +15,7 @@
             <img id="perfil" src="\imagens\perfil-enio.jpg">
             <div id="texto-perfil">
                 <h4>ATEÍSMO (ATEU)</h4>
+                <hr>
                 O ateísmo não é uma religião, pois não se baseia em práticas de
                 <div class="tooltip">
                     <h3>rituais</h3>
@@ -39,7 +40,7 @@
                 a muito tempo atrás.
             </div>
         </div>
-        <img src="\imagens\epicuro.png">
+        <img id="imgQ2" src="\imagens\epicuro.png">
         <div id="quadro2"><strong>Epicuro</strong> é considerado o primeiro
             <div class="tooltip">
                 <h3>filósofo</h3>
@@ -93,7 +94,7 @@
             que se dispuseram a enfrentar a imposição de ideias pré-concebidas e carregadas de mitos,
             tendo coragem de contestá-las.
         </div>
-        <img id="cena" src="\imagens\mikhail-bakunin.png">
+        <img id="imgQ4" src="\imagens\mikhail-bakunin.png">
         <div id="quadro4">No decorrer dos anos, muitos outros homens se levantaram expondo suas
             convicções, agora sim, mais livres do medo de serem discriminados. Já no século XIX,
             homens famosos como
