Ajustes e correções agnosticismo

--- a/agnosticismo.html
+++ b/agnosticismo.html
@@ -76,8 +76,8 @@
             existe ou não, já que não há como saber com certeza.
             De que adianta alegar uma coisa se eu não posso provar? Nada! Eu posso,
             simplesmente não acreditar em você. É um direito meu. Alguns amigos meus
-            tentam me convencer com muitos argumentos do tipo: "Eu senti isso!" Ou
-            "Veja o milagre que aconteceu na minha vida!" Mas isso não prova nada!
+            tentam me convencer com muitos argumentos do tipo: "Eu senti isso!" Ou:
+            "veja o milagre que aconteceu na minha vida!" Mas isso não prova nada!
             Não é fato científico. Tudo o que temos são dúvidas e erros, não há como
             saber se o que se aprendeu é verdadeiro ou não. Isso só nos leva a discussões
             intermináveis. Quando se pensa que se está avançando em direção a uma
