--- a/ateismo.html
+++ b/ateismo.html
@@ -36,7 +36,7 @@
                 admirando a natureza mesmo em suas contradições, suas maravilhas e suas
                 deficiências, e sobretudo entender a natureza das relações humanas,
                 o bem e o mal. Este caminho foi trilhado por muitos homens no passado.
-                Muito das quesões modernas já foram pensadas e discutidas profundamente
+                Muito das questões modernas já foram pensadas e discutidas profundamente
                 a muito tempo atrás.
             </div>
         </div>
