Correções e ajustes - deismo

--- a/ateismo.html
+++ b/ateismo.html
@@ -76,37 +76,41 @@
                     como, liberdade, tolerância, fraternidade e separação Igreja-Estado.
                 </span>
             </div>
-            despontava combatendo e criticando a religião e reforçando a ideia do pensamento
-            livre. Com o desenrolar dos séculos, o despertar do desenvolvimento intelectual
-            teve papel significativo para os argumentos ateístas. Surgiram homens como
-            <strong>Michail Bakunin</strong>, revolucionário, sociólogo, filósofo, reconhecido por seu enorme prestígio
-            como ativista político e cuja influência foi substancial entre os radicais da Rússia
-            e da Europa. Ele rejeitou todos os sistemas de governo fossem qual fossem o seu
-            formato, principalmente aqueles baseados em escolha divina. Inverteu o famoso
+            despontava combatendo e criticando a religião e reforçando a ideia do
+            pensamento livre. Com o desenrolar dos séculos, o despertar do desenvolvimento
+            intelectual teve papel significativo para os argumentos ateístas. Surgiram
+            homens como <strong>Michail Bakunin</strong>, revolucionário, sociólogo,
+            filósofo, reconhecido por seu enorme prestígio como ativista político e cuja
+            influência foi substancial entre os radicais da Rússia e da Europa. Ele
+            rejeitou todos os sistemas de governo fossem qual fossem o seu formato,
+            principalmente aqueles baseados em escolha divina. Inverteu o famoso
             <div class="tooltip">
                 <h3>aforismo</h3>
-                <span class="tooltip4">Um preceito expresso em forma de sentença breve, um ditado
-                    (popular).
+                <span class="tooltip4">Um preceito expresso em forma de sentença breve,
+                    um ditado (popular).
                 </span>
             </div>
-            de <strong>Voltaire</strong> de que "se Deus não existisse, seria preciso inventá-lo", reinterpretando-o
-            da seguinte forma: “se Deus realmente existisse, seria necessário aboli-lo”. Homens
-            que se dispuseram a enfrentar a imposição de ideias pré-concebidas e carregadas de mitos,
-            tendo coragem de contestá-las.
+            de <strong>Voltaire</strong> de que "se Deus não existisse, seria preciso
+            inventá-lo", reinterpretando-o da seguinte forma:
+            <p>“se Deus realmente existisse, seria necessário aboli-lo”.</p>
+            Homens, como ele, se dispuseram a enfrentar a imposição de ideias pré-concebidas
+            e carregadas de mitos, tendo coragem de contestá-las.
         </div>
         <img id="imgQ4" src="\imagens\mikhail-bakunin.png">
-        <div id="quadro4">No decorrer dos anos, muitos outros homens se levantaram expondo suas
-            convicções, agora sim, mais livres do medo de serem discriminados. Já no século XIX,
-            homens famosos como
+        <div id="quadro4">No decorrer dos anos, muitos outros homens se levantaram
+            expondo suas convicções, agora sim, mais livres do medo de serem discriminados.
+            Já no século XIX, homens famosos como
             <div class="tooltip">
                 <h3>Ludwig Feuerbach</h3>
-                <span class="tooltip5">Foi um filósofo alemão reconhecido pelo ateísmo humanista e
-                    antropológico e pela influência que o seu pensamento exerceu sobre Karl Marx.
+                <span class="tooltip5">Foi um filósofo alemão reconhecido pelo ateísmo
+                    humanista e antropológico (centrado no homem) e pela influência que
+                    o seu pensamento exerceu sobre Karl Marx.
                 </span>
             </div> e
             <div class="tooltip">
                 <h3>Sigmund Freud</h3>
-                <span class="tooltip6">Foi um médico neurologista e psiquiatra criador da psicanálise.
+                <span class="tooltip6">Foi um médico neurologista e psiquiatra criador
+                    da psicanálise.
                 </span>
             </div>
             argumentaram que a ideia de deus e outras crenças religiosas são invenções
